Slides height fix in base.css to hide horizontal scrollbar. Fixed the list example in README

--- a/css/base.css
+++ b/css/base.css
@@ -112,12 +112,14 @@ article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section,.c
 		display: inline;
 		float: left;
 		width: 100%;
+		height: 100%;
 	}
 		.viewport .slides ul li
 		{
 			display: inline;
 			float: left;
 			width: 100%;
+			height: 100%;
 			overflow-x: hidden;
 		}
 
